--- a/config.yaml
+++ b/config.yaml
@@ -145,7 +145,7 @@ Standards:
         Path: /intro-to-debugging/intro-to-debugging.md
   -
     Title: Representing Data
-    Description: "Variable Scope, Variables Are References, Representing Data in Lists and Dictionaries, Sets, Tuples, Data and JSON, Problem Set: Representing Data, Problem Set: Sets, Problem Set: Tuples, Activity: Representing Data"
+    Description: "Representing Data in Lists and Dictionaries, Sets, Tuples, Data and JSON, Problem Set: Representing Data, Problem Set: Sets and Tuples, Activity: Representing Data"
     UID: 6736abef6aad93ad0fdb8d10e1849b62
     SuccessCriteria:
       - success criteria
@@ -177,12 +177,7 @@ Standards:
       -
         Type: Lesson
         UID: 30086be0-510f-414c-ab8f-3625c4a48548
-        Path: /representing-data/problem-set-sets.md
-      -
-        Type: Lesson
-        UID: 0913b292-4d34-4ec4-9a42-5192ff130113
-        Path: /representing-data/problem-set-tuples.md
-      
+        Path: /representing-data/problem-set-sets-and-tuples.md      
   -
     Title: Variables and Memory
     Description: "Variable Scope, Variables Are References, Problem Set: Variables and Memory"
