--- a/config.yaml
+++ b/config.yaml
@@ -334,6 +334,18 @@ Standards:
         Type: Lesson
         UID: 77440f05-b130-4540-885c-f81cbd7370d4
         Path: /higher-order-functions/intro-to-higher-order-functions.md
+      -
+        Type: Lesson
+        UID: 54274421-2f6d-4089-a6b2-72833e3ff1bf
+        Path: /higher-order-functions/sort-lambda.md
+      -
+        Type: Lesson
+        UID: db623de7-cd43-4da7-81e6-a9697f3b6c8c
+        Path: /higher-order-functions/min-max.md
+      -
+        Type: Lesson
+        UID: 445f012e-7aae-456f-adb5-5c7f6dec6bd4
+        Path: /higher-order-functions/higher-order-functions-problem-set.md
   -
     Title: Intro To Object-Oriented Programming
     Description: "What is OOP?, Defining Classes, Constructors, Creating Instances, Instance Methods, Problem Set: Intro to OOP, Problem Set: Constructors"
