--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,188 @@
 ---
 Standards:
   -
+    Title: Fundamentals
+    Description: "Fundamentals Vocabulary, Conditionals, Functions Overview, Defining Functions, Invoking Functions, How to Read Documentation, Problem Set: Fundamentals Vocabulary, Problem Set: Conditionals, Problem Set: Intro to Functions, Math Primer"
+    UID: w7RhPU
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: c8607470-a07c-4a70-b1c8-5a4e4edb8519
+        Path: /fundamentals/fundamentals-vocabulary.md
+      -
+        Type: Lesson
+        UID: 17ba3d49-8311-499f-b98e-5f2187490952
+        Path: /fundamentals/conditionals.md
+      -
+        Type: Lesson
+        UID: 8b4b8d39fd4f56926aa6181cb77ed45f
+        Path: /fundamentals/functions-overview.md
+      -
+        Type: Lesson
+        UID: 2a192a35477f1d52a01849d3b778609c
+        Path: /fundamentals/invoking-functions.md
+      -
+        Type: Lesson
+        UID: 692aeabdceb105d82aed2187db381860
+        Path: /fundamentals/defining-functions.md
+      -
+        Type: Lesson
+        UID: 0ea7bd4c9be9469bd0232744edf2a80d
+        Path: /fundamentals/how-to-read-documentation.md
+      -
+        Type: Lesson
+        UID: 9f71d60b-6423-40d0-9538-4c97949a4c27
+        Path: /fundamentals/problem-set-fundamentals-vocabulary.md
+      -
+        Type: Lesson
+        UID: 38f51e50-819c-49ec-af31-b860a8e532f5
+        Path: /fundamentals/problem-set-conditionals.md
+      -      
+        Type: Lesson
+        UID: 5c78092f-7794-4fdd-9449-a57e65689770
+        Path: /fundamentals/problem-set-intro-to-functions.md
+      -
+        Type: Lesson
+        UID: 1f5dfdf5-4a2a-4874-a3e3-5ae4af3b63e2
+        Path: /fundamentals/math-primer.md
+  -
+    Title: What Is Software Development
+    Description: "What is Software?, Study Like a Programmer, Activity: Intention Setting Our Careers, Activity: Study Plan"
+    UID: 9db5757cd4ec665b52cdc40eb2e6c184
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: 79b2e5a13c74e07f670ad4f6e0c9be75
+        Path: /what-is-software-development/what-is-software.md
+      -
+        Type: Lesson
+        UID: f1ec9a5d833e26f643c2aa2be8cec25f
+        Path: /what-is-software-development/study-like-a-programmer.md
+      -
+        Type: Instructor
+        UID: 2208effa2c7f806e68a4a11493d42391
+        Path: /what-is-software-development/activity-intention-setting-our-careers.instructor.md
+      -
+        Type: Lesson
+        UID: c0730743994de39e585f6c6a3718b26c
+        Path: /what-is-software-development/activity-intention-setting-our-careers.md
+      -
+        Type: Instructor
+        UID: 99be5734a0b03b94f8dbb3879d6e02e2
+        Path: /what-is-software-development/activity-study-plan.instructor.md
+      -
+        Type: Lesson
+        UID: d0b4410f501e2fd84af60ab3f7195403
+        Path: /what-is-software-development/activity-study-plan.md
+  -
+    Title: Intro to Dev Environment
+    Description: "Intro to Command Line, Intro to Computer Memory"
+    UID: QkZshi
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Instructor
+        UID: 8QL8Gs
+        Path: /intro-to-dev-environment/intro-to-dev-environment.instructor.md
+      -
+        Type: Lesson
+        UID: SxcEt0
+        Path: /intro-to-dev-environment/intro-to-command-line.md
+      -
+        Type: Lesson
+        UID: Bp7qUb
+        Path: /intro-to-dev-environment/intro-to-computer-memory.md
+  -
+    Title: Approaching a Problem
+    Description: "Breaking down a problem, Pseudocode and Logic, Pair Programming, Activity: Breaking Down a Problem"
+    UID: pSGW3x
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: LrjdJa
+        Path: /approaching-a-problem/breaking-down-a-problem.md
+      -
+        Type: Lesson
+        UID: DkCHnM
+        Path: /approaching-a-problem/pseudocode-and-logic.md
+      -
+        Type: Lesson
+        UID: YUccLN
+        Path: /approaching-a-problem/intro-to-pair-programming.md
+      -
+        Type: Instructor
+        UID: oFxeWF
+        Path: /approaching-a-problem/activity-breaking-down-a-problem.instructor.md
+      -
+        Type: Lesson
+        UID: qutJWB
+        Path: /approaching-a-problem/activity-breaking-down-a-problem.md
+  -
+    Title: Intro to Debugging
+    Description: Intro to Errors, Identifying Errors, Intro to Debugging
+    UID: aGJLyn
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: amY0J6
+        Path: /intro-to-debugging/intro-to-errors.md
+      -
+        Type: Lesson
+        UID: B6OYlI
+        Path: /intro-to-debugging/identifying-errors.md
+      -
+        Type: Lesson
+        UID: VvrMFH
+        Path: /intro-to-debugging/intro-to-debugging.md
+  -
+    Title: Representing Data
+    Description: "Representing Data in Lists and Dictionaries, Sets, Tuples, Data and JSON, Problem Set: Representing Data, Problem Set: Sets and Tuples, Activity: Representing Data"
+    UID: 6736abef6aad93ad0fdb8d10e1849b62
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Instructor
+        UID: 9dcbb90f
+        Path: /representing-data/activity-representing-data.instructor.md 
+      -
+        Type: Lesson
+        UID: 88DgSp
+        Path: /representing-data/representing-data-in-lists-and-dictionaries.md
+      -
+        Type: Lesson
+        UID: 230e0a1b-f552-45ad-969a-6f577a5f91c6
+        Path: /representing-data/sets.md      
+      -
+        Type: Lesson
+        UID: 0318804d-6a48-4905-bdea-2a5a4e523127
+        Path: /representing-data/tuples.md
+      -
+        Type: Lesson
+        UID: r7MHqf
+        Path: /representing-data/data-and-json.md
+      -
+        Type: Lesson
+        UID: p4Pb0s
+        Path: /representing-data/problem-set-representing-data.md
+      -
+        Type: Lesson
+        UID: 30086be0-510f-414c-ab8f-3625c4a48548
+        Path: /representing-data/problem-set-sets-and-tuples.md 
+      -
+        Type: Lesson
+        UID: 1f3084593d9eed2a8ec8a797cbfdd89b
+        Path: /representing-data/activity-representing-data.md     
+  -
     Title: Intro To Tests
     Description: "Automated Tests, Intro to pytest, Test Driven Development, Problem Set: Intro to Tests, Activity: TDD Exercise"
     UID: cxnH0Z
@@ -39,6 +221,81 @@ Standards:
         Type: Resource
         UID: 533f8f6dada668c242e332613c0052ef
         Path: /intro-to-tests/intro-to-decorators.md
+    
+  -
+    Title: Iterating Over Data
+    Description: "Intro to Iteration, Iterating Over Lists, Iterating Over Dictionaries, While Loops, Iterating and Special Cases, Problem Set: Iterating Over Data, Problem Set: While Loops"
+    UID: giOpFA
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: DH2nXe
+        Path: /iterating-over-data/intro-to-iteration.md
+      -
+        Type: Lesson
+        UID: bCBDvR
+        Path: /iterating-over-data/iterating-over-lists.md
+      -
+        Type: Lesson
+        UID: OiwVkc
+        Path: /iterating-over-data/iterating-over-dictionaries.md
+      -
+        Type: Lesson
+        UID: KyZkme
+        Path: /iterating-over-data/while-loops.md
+      -
+        Type: Lesson
+        UID: 4oVaz5
+        Path: /iterating-over-data/iterating-and-special-cases.md
+      -
+        Type: Lesson
+        UID: maPjmo
+        Path: /iterating-over-data/problem-set-iterating-over-data.md
+      -
+        Type: Lesson
+        UID: 3302a20d
+        Path: /iterating-over-data/problem-set-while-loops.md
+      -
+        Type: Instructor
+        UID: c8eef724
+        Path: /iterating-over-data/problem-set-while-loops.instructor.md
+  -
+    Title: Debugging Continued
+    Description: "Debugging Continued, Problem Set: Debugging Continued"
+    UID: 50c966ad-6dc5-4a52-9881-36a1d79e86e0
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: ac211af9-adc9-48b4-aebe-d9e31dbe953b
+        Path: /debugging-contd/debugging-contd.md
+      -
+        Type: Lesson
+        UID: 8180f119-17d9-4c8e-81d8-7e0acd52329e
+        Path: /debugging-contd/problem-set-debugging-contd.md
+  -
+    Title: Nested Data and Nested Loops
+    Description: "Nested Lists and Dictionaries, Nested Loops, Problem Set: Nested Data and Nested Loops"
+    UID: DcrO5J
+    SuccessCriteria:
+      - success criteria
+    ContentFiles:
+      -
+        Type: Lesson
+        UID: PuRG5U
+        Path: /nested-data-and-nested-loops/nested-lists-and-dictionaries.md
+      -
+        Type: Lesson
+        UID: Mo0XXv
+        Path: /nested-data-and-nested-loops/nested-loops.md
+      -
+        Type: Lesson
+        UID: bqPsZH
+        Path: /nested-data-and-nested-loops/problem-set-nested-data-and-nested-loops.md
+
   -
     Title: Exception Handling
     Description: "Raising and Handling Exceptions, Checking Exceptions in Tests, Problem Set: Exception Handling, Activity: Exception Handling"
