--- a/config.yaml
+++ b/config.yaml
@@ -97,6 +97,10 @@ Standards:
         Type: Lesson
         UID: Bp7qUb
         Path: /intro-to-dev-environment/intro-to-computer-memory.md
+      -
+        Type: Lesson
+        UID: ac57c0c7-1465-45ab-bd13-be8764bde949
+        Path: /intro-to-dev-environment/problem-set-intro-to-dev-environment.md
   -
     Title: Approaching a Problem
     Description: "Breaking down a problem, Pseudocode and Logic, Pair Programming, Activity: Breaking Down a Problem"
